--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@ var fuelBuff = 0;
 class Platform{
   constructor(){
     gasChance++;
-    this.type = Math.random > 0.5 ? platform1 : platform2;
+    this.type = Math.random() > 0.5 ? platform1 : platform2;
+    // if(Math.random() > 0.5){
+    //   this.type = platform1;
+    // } else{
+    //   this.type = platform2;
+    // }
 this.x  = Math.random() * (canvas.width * 3);
 this.y = (Math.random() *(canvas.height * (3/4)) + canvas.height/5);
  this.w = (Math.random() *450) + 150;
