--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <img src = "platform2.png" id = "platform2"></img>
 
 <img src = "begin.png" id = "begin"></img>
-<img src = "intro.png" id = "intro"></img>
+<img src = "intro.PNG" id = "intro"></img>
 
 
 
