--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         canvas {
             border: 3px solid #d3d3d3;
             position: absolute;
-            background-image: url("intro.png");
+            background-image: url("intro.PNG");
         }
     </style>
 </head>
@@ -395,7 +395,7 @@ if(flash % 2 == 1){
   ctx.drawImage(begin,340,400,begin.width * 0.7, begin.height * 0.7);
 }
 
-},500)
+},400)
 
 
 
